syntax = "proto3";

package com.road.yishi.proto.quest;

message QuestFinishedReqMsg {
  int32 templateId = 1;
  int32 rewardItemId = 2;
  bool isPass = 3;
}
